ui: remove Card hover effect on mobile touch

--- a/packages/core/src/components/Card.module.scss
+++ b/packages/core/src/components/Card.module.scss
@@ -1,5 +1,7 @@
 .card {
-    &:hover {
-        background-color: var(--neutral-alpha-weak);
+    @media (hover: hover) {
+        &:hover {
+            background-color: var(--neutral-alpha-weak);
+        }
     }
 }
