--- a/packages/core/src/modules/navigation/HeadingLink.module.scss
+++ b/packages/core/src/modules/navigation/HeadingLink.module.scss
@@ -1,13 +1,9 @@
 .control {
-    cursor: pointer;
-
-    &:hover {
-        .visibility {
-            opacity: 1;
-        }
-
-        .text {
-            text-decoration-line: underline;
+    @media (hover: hover) {
+        &:hover {
+            .text {
+                text-decoration-line: underline;
+            }
         }
     }
 }
@@ -16,9 +12,4 @@
     text-decoration-thickness: 1px;
     text-underline-offset: 0.25em;
     text-decoration-color: var(--neutral-border-strong);
-}
-
-.visibility {
-    opacity: 0;
-    transform: scale(0.875);
 }
