--- a/packages/core/src/tokens/theme.scss
+++ b/packages/core/src/tokens/theme.scss
@@ -4,10 +4,12 @@
     --font-label:   var(--font-label);
     --font-code:    var(--font-code);
 
+    --font-size-display-multiplier:   1;
     --font-size-heading-multiplier:   1;
     --font-size-body-multiplier:      1;
     --font-size-label-multiplier:     1;
 
+    --line-height-display-multiplier: 1;
     --line-height-heading-multiplier: 1;
     --line-height-body-multiplier:    1;
     --line-height-label-multiplier:   1;
