ui: dont render focus ring for interactive components on tap

--- a/packages/core/src/components/SharedInteractiveStyles.module.scss
+++ b/packages/core/src/components/SharedInteractiveStyles.module.scss
@@ -40,7 +40,7 @@
 }
 
 .container:hover .element::before,
-.element:focus-within::before {
+.element:focus-visible::before {
     content: '';
     position: absolute;
     top: 50%;
