--- a/packages/core/src/components/Switch.module.scss
+++ b/packages/core/src/components/Switch.module.scss
@@ -78,7 +78,7 @@
 }
 
 .container:hover .element::before,
-.element:focus-within::before {
+.element:focus-visible::before {
     content: '';
     position: absolute;
     top: 50%;
