fix(ui): adjust Input component height for placeholder-only inputs
add ./idea to .gitignore

--- a/packages/core/src/components/Input.module.scss
+++ b/packages/core/src/components/Input.module.scss
@@ -6,10 +6,8 @@
         border-color: var(--neutral-border-medium);
     }
 
-    &:has(.placeholder):has(.floating) {
-        .placeholder {
-          padding-top: var(--static-space-12);
-        }
+    &:has(.placeholder) {
+        min-height: var(--static-space-48);
     }
 }
 
@@ -61,9 +59,13 @@
 .s {
     min-height: var(--static-space-48);
 
+    &:has(.placeholder) {
+        min-height: var(--static-space-40);
+    }
+
     .label {
         &.floating {
-            top: calc(var(--static-space-4) - var(--static-space-1));
+            top: var(--static-space-4);
         }
     }
 }
