fix: add new color schemes to color functions

--- a/packages/core/src/tokens/function.scss
+++ b/packages/core/src/tokens/function.scss
@@ -665,6 +665,63 @@
     --function-neutral-600-50: var(--scheme-gray-600-50);
 }
 
+[data-neutral="rose"] {
+    --function-neutral-100:  var(--scheme-rose-100);
+    --function-neutral-200:  var(--scheme-rose-200);
+    --function-neutral-300:  var(--scheme-rose-300);
+    --function-neutral-400:  var(--scheme-rose-400);
+    --function-neutral-500:  var(--scheme-rose-500);
+    --function-neutral-600:  var(--scheme-rose-600);
+    --function-neutral-700:  var(--scheme-rose-700);
+    --function-neutral-800:  var(--scheme-rose-800);
+    --function-neutral-900:  var(--scheme-rose-900);
+    --function-neutral-1000: var(--scheme-rose-1000);
+    --function-neutral-1100: var(--scheme-rose-1100);
+    --function-neutral-1200: var(--scheme-rose-1200);
+
+    --function-neutral-600-15: var(--scheme-rose-600-15);
+    --function-neutral-600-30: var(--scheme-rose-600-30);
+    --function-neutral-600-50: var(--scheme-rose-600-50);
+}
+
+[data-neutral="mint"] {
+    --function-neutral-100:  var(--scheme-mint-100);
+    --function-neutral-200:  var(--scheme-mint-200);
+    --function-neutral-300:  var(--scheme-mint-300);
+    --function-neutral-400:  var(--scheme-mint-400);
+    --function-neutral-500:  var(--scheme-mint-500);
+    --function-neutral-600:  var(--scheme-mint-600);
+    --function-neutral-700:  var(--scheme-mint-700);
+    --function-neutral-800:  var(--scheme-mint-800);
+    --function-neutral-900:  var(--scheme-mint-900);
+    --function-neutral-1000: var(--scheme-mint-1000);
+    --function-neutral-1100: var(--scheme-mint-1100);
+    --function-neutral-1200: var(--scheme-mint-1200);
+
+    --function-neutral-600-15: var(--scheme-mint-600-15);
+    --function-neutral-600-30: var(--scheme-mint-600-30);
+    --function-neutral-600-50: var(--scheme-mint-600-50);
+}
+
+[data-neutral="dusk"] {
+    --function-neutral-100:  var(--scheme-dusk-100);
+    --function-neutral-200:  var(--scheme-dusk-200);
+    --function-neutral-300:  var(--scheme-dusk-300);
+    --function-neutral-400:  var(--scheme-dusk-400);
+    --function-neutral-500:  var(--scheme-dusk-500);
+    --function-neutral-600:  var(--scheme-dusk-600);
+    --function-neutral-700:  var(--scheme-dusk-700);
+    --function-neutral-800:  var(--scheme-dusk-800);
+    --function-neutral-900:  var(--scheme-dusk-900);
+    --function-neutral-1000: var(--scheme-dusk-1000);
+    --function-neutral-1100: var(--scheme-dusk-1100);
+    --function-neutral-1200: var(--scheme-dusk-1200);
+
+    --function-neutral-600-15: var(--scheme-dusk-600-15);
+    --function-neutral-600-30: var(--scheme-dusk-600-30);
+    --function-neutral-600-50: var(--scheme-dusk-600-50);
+}
+
 [data-neutral="sand"] {
     --function-neutral-100:  var(--scheme-sand-100);
     --function-neutral-200:  var(--scheme-sand-200);
