feat: Flex and Grid props, breakpoint style cascading and value support

--- a/packages/core/src/styles/border.scss
+++ b/packages/core/src/styles/border.scss
@@ -366,6 +366,10 @@
     border-color: var(--static-transparent);
 }
 
+.default-border {
+    border-color: var(--default-border);
+}
+
 /* NEUTRAL */
 .neutral-border-weak {
     border-color: var(--neutral-border-weak);
