--- a/packages/core/src/tokens/theme.scss
+++ b/packages/core/src/tokens/theme.scss
@@ -26,6 +26,7 @@
     --backdrop-filter:       none;
     --surface-border:        var(--static-transparent);
     --surface-background:    var(--neutral-background-medium);
+    --default-border:        var(--neutral-border-medium);
 }
 
 [data-cursor-interactive="pointer"] {
