refact: use CSS to apply hover style in Carousel and adjust indicator height

--- a/packages/core/src/components/Carousel.module.scss
+++ b/packages/core/src/components/Carousel.module.scss
@@ -1,3 +1,19 @@
+.indicator {
+  &:hover, &:focus-within {
+    .inactive {
+      background: var(--neutral-alpha-strong);
+    }
+  }
+}
+
+.inactive {
+  background: var(--neutral-alpha-medium);
+}
+
+.active {
+  background: var(--neutral-on-background-strong);
+}
+
 .controls {
   &:hover, &:focus-within {
     .fade {
